          the maintainer believe this is safe, but this is a very complex
          area and reality may turn out to be different. If **ANYHTING** at
          all seems out of place, please file a report at once
        - The unique constraint info (including the primary key columns) is no
          longer shared between related (class and schema-level) ResultSource
          instances
        - Neither exception_action() nor $SIG{__DIE__} handlers are invoked
          on recoverable errors. This ensures that the retry logic is fully
          insulated from changes in control flow, as the handlers are only
          invoked when an error is leaving the DBIC internals to be handled by
          the caller (n.b. https://github.com/PerlDancer/Dancer2/issues/1125)
          (also fixes the previously rejected RT#63874)
        - $result->related_resultset() no longer passes extra arguments to
          an underlying search_rs(), as by design these arguments would be
          used only on the first call to ->related_resultset(), and ignored
          afterwards. Instead an exception (detailing the fix) is thrown.
        - Increased checking for the correctness of the is_nullable attribute
          within the prefetch result parser may highlight previously unknown
          mismatches between your codebase and data source
        - Calling the set_* many-to-many helper with a list (instead of an
          arrayref) now emits a deprecation warning
        - Calling the getter $rsrc->from("argument") now throws an exception
          instead of silently discarding the argument

    * New Features
        - InflateColumn::DateTime now accepts the ecosystem-standard option
          'time_zone', in addition to the DBIC-only 'timezone' (GH#28)
        - Massively optimised literal SQL snippet scanner - fixes all known
          slowdowns ( in some cases 50x ) of very complex prefetch/selects
        - DBIx::Class::Optional::Dependencies now properly understands